/goldex method is now /proxy
