# docs/v1/api.swagger.json
@@ -158,42 +158,6 @@
         }
       }
     },
-    "/goldex": {
-      "post": {
-        "description": "Performs a call to a named backend method defined in Goldex dashboard.",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "tags": [
-          "Other"
-        ],
-        "summary": "Call to a named Goldex backend method.",
-        "operationId": "Goldex",
-        "parameters": [
-          {
-            "description": "JSONRPC params",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/GoldexRequest"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "JSONRPC error"
-          },
-          "x-jsonrpc-success": {
-            "description": "Result",
-            "schema": {
-              "$ref": "#/definitions/GoldexResult"
-            }
-          }
-        }
-      }
-    },
     "/hardware": {
       "get": {
         "description": "An event may be generated by optional hardware installed within the terminal. Depends on implementation.",
@@ -315,6 +279,42 @@
           },
           "x-jsonrpc-success": {
             "description": "No payload"
+          }
+        }
+      }
+    },
+    "/proxy": {
+      "post": {
+        "description": "Requires Goldex backend to sign and send an HTTP POST request to the business backend. Endpoint address and it's name should be defined in Goldex dashboard.",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "Other"
+        ],
+        "summary": "Send a request to the named endpoint of the business backend.",
+        "operationId": "Proxy",
+        "parameters": [
+          {
+            "description": "JSONRPC params",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/ProxyRequest"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "JSONRPC error"
+          },
+          "x-jsonrpc-success": {
+            "description": "Result",
+            "schema": {
+              "$ref": "#/definitions/ProxyResult"
+            }
           }
         }
       }
@@ -672,61 +672,6 @@
       },
       "x-go-package": "github.com/goldexrobot/core.integration.ui/api/v1"
     },
-    "GoldexRequest": {
-      "type": "object",
-      "properties": {
-        "body": {
-          "description": "request key-value",
-          "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          },
-          "x-go-name": "Body",
-          "example": {
-            "bar": [
-              "baz",
-              "qux"
-            ],
-            "foo": "bar"
-          }
-        },
-        "method": {
-          "description": "predefined method name",
-          "type": "string",
-          "x-go-name": "Method",
-          "example": "my-method"
-        }
-      },
-      "x-go-package": "github.com/goldexrobot/core.integration.ui/api/v1"
-    },
-    "GoldexResult": {
-      "type": "object",
-      "properties": {
-        "body": {
-          "description": "result key-value",
-          "type": "object",
-          "additionalProperties": {
-            "type": "object"
-          },
-          "x-go-name": "Body",
-          "example": {
-            "bar": [
-              "baz",
-              "qux"
-            ],
-            "foo": "bar"
-          }
-        },
-        "http_status": {
-          "description": "http status",
-          "type": "integer",
-          "format": "int64",
-          "x-go-name": "HttpStatus",
-          "example": 200
-        }
-      },
-      "x-go-package": "github.com/goldexrobot/core.integration.ui/api/v1"
-    },
     "HardwareRequest": {
       "type": "object",
       "properties": {
@@ -801,6 +746,61 @@
           "type": "string",
           "x-go-name": "Name",
           "example": "my-pos"
+        }
+      },
+      "x-go-package": "github.com/goldexrobot/core.integration.ui/api/v1"
+    },
+    "ProxyRequest": {
+      "type": "object",
+      "properties": {
+        "body": {
+          "description": "request key-value",
+          "type": "object",
+          "additionalProperties": {
+            "type": "object"
+          },
+          "x-go-name": "Body",
+          "example": {
+            "bar": [
+              "baz",
+              "qux"
+            ],
+            "foo": "bar"
+          }
+        },
+        "endpoint": {
+          "description": "predefined endpoint name",
+          "type": "string",
+          "x-go-name": "Endpoint",
+          "example": "my-method"
+        }
+      },
+      "x-go-package": "github.com/goldexrobot/core.integration.ui/api/v1"
+    },
+    "ProxyResult": {
+      "type": "object",
+      "properties": {
+        "body": {
+          "description": "result key-value",
+          "type": "object",
+          "additionalProperties": {
+            "type": "object"
+          },
+          "x-go-name": "Body",
+          "example": {
+            "bar": [
+              "baz",
+              "qux"
+            ],
+            "foo": "bar"
+          }
+        },
+        "http_status": {
+          "description": "http status",
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "HttpStatus",
+          "example": 200
         }
       },
       "x-go-package": "github.com/goldexrobot/core.integration.ui/api/v1"
